Updated retrieving csv header functionality, added result write functionality.